refactor: Improve JSONParser code structure and readability